<resources>
    <string name="app_name">My ApplicationCalculator</string>
    <string name="equals">＝</string>
    <string name="point">.</string>
    <string name="num0">0</string>
    <string name="num3">3</string>
    <string name="num2">2</string>
    <string name="num1">1</string>
    <string name="num6">6</string>
    <string name="num5">5</string>
    <string name="num4">4</string>
    <string name="mul">×</string>
    <string name="dec">－</string>
    <string name="add">＋</string>
    <string name="div">÷</string>
    <string name="clean">AC</string>
    <string name="back">Back</string>
    <string name="AddMinusSign">+/-</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="btn_info">制作成员信息</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_registe">注册</string>
    <string name="cb_forpassword">忘记密码</string>
    <string name="cb_rbpassword">记住密码</string>
    <string name="cb_autologin">自动登录</string>
    <string name="btn_ok">登录</string>
    <string name="txt_count"></string>
    <string name="txt_password"></string>
</resources>
